--- a/VideoConf/Views/Shared/_Layout.cshtml
+++ b/VideoConf/Views/Shared/_Layout.cshtml
@@ -98,6 +98,12 @@
         .AudioOn {
             display: none;
         }
+        .noVideo{
+            background-image:url("");
+        }
+        .noVideo video{
+            display:none;
+        }
     </style>
 </head>
 <body>    
