--- a/VideoConf/Views/Home/Index.cshtml
+++ b/VideoConf/Views/Home/Index.cshtml
@@ -26,11 +26,11 @@
                         <div id="video-container">
                             <div id="participants">
 
-                             
+
                             </div>
                         </div>
                     </div>
-
+                    <video loop autoplay controls="true" style="width:100%; height:100%" src='//some_video.mp4' type='video/mp4'></video>
                 </div>
             </main>
         </div>
